objects/Enrollment_Summary_51_Terms__c.object
<CustomObject>
    <fields>
        <fullName>Contracts__c</fullName>
        <description>Holds the current Termed Contract count for 51+.</description>
        <inlineHelpText>Holds the current Termed Contract count for 51+.</inlineHelpText>
        <label>Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <description>Holds the current value of Termed Groups for 51+.</description>
        <inlineHelpText>Holds the current Termed Contract count for 51+.</inlineHelpText>
        <label>Groups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <description>Jurisdiction to which the total pertains.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Jurisdiction to which the total pertains.</inlineHelpText>
        <label>Jurisdiction</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Holds the current # of Termed Contracts and Groups for 51+.</description>
    <label>Enrollment Summary 51+ Terms</label>
</CustomObject>